# vlaskool

./: .gitignore  README.md  pyproject.toml  setup.sh
configs/: tasks.yaml  training.yaml
docs/: blog.md
scripts/: benchmark.py  check_so100_pipeline.py  collect_demos.py  eval_checkpoint.py  generate_plots.py  generate_plots_multitask.py  generate_plots_success_only.py  run_continual_rl.py  run_full_experiment.py  run_sft.py  run_zero_shot.py
src/vlaskool/: __init__.py
src/vlaskool/continual/: __init__.py  trainer.py
src/vlaskool/envs/: __init__.py  put_object_on_plate.py  wrappers.py
src/vlaskool/evaluation/: __init__.py  evaluator.py  metrics.py
src/vlaskool/models/: __init__.py  lora_manual.py  policy.py
src/vlaskool/training/: __init__.py  grpo.py  rollout.py  sft.py
