[project]
name = "vlaskool"
version = "0.1.0"
description = "Continual RL VLA: SmolVLA + GRPO on ManiSkill — paper reproduction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    # HuggingFace ecosystem
    "transformers>=4.48.0",
    "peft>=0.14.0",
    "accelerate>=1.2.0",
    "datasets>=3.2.0",
    "huggingface-hub>=0.27.0",
    # LeRobot (SmolVLA)
    "lerobot>=0.3.2",
    # ManiSkill3
    "mani-skill>=3.0.0b0",
    # RL / gymnasium
    "gymnasium>=0.29.1",
    # Numerics
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "einops>=0.8.0",
    # Config & CLI
    "omegaconf>=2.3.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    # Logging
    "wandb>=0.19.0",
    "tensorboard>=2.18.0",
    # Data
    "h5py>=3.12.0",
    "imageio>=2.36.0",
    "imageio-ffmpeg>=0.5.0",
    "pillow>=11.0.0",
    # Utilities
    "tqdm>=4.67.0",
    "pyyaml>=6.0.2",
    "tabulate>=0.9.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "mplib>=0.1.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vlaskool"]

[dependency-groups]
dev = [
    "ipython",
    "jupyter",
    "ipykernel",
    "pytest>=8.0.0",
    "black",
    "ruff",
]

# RTX 4090 → CUDA 12.4
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
